# CPP_AppTemplate

./: CMakeLists.txt  README.md  makefile
src/: Print.hpp  main.cpp
src/Core/: Print.cpp
